Chart and corresponding UI

--- a/index.html
+++ b/index.html
@@ -107,7 +107,42 @@
             </div>
         </div>
         <div class="main-content">
-            main-content
+            <div class="issuenumber">
+                <h3>Open</h3>
+                <h1>21</h1>
+            </div>
+            <div class="issuenumber">
+                <h3>Unresolved</h3>
+                <h1>18</h1>
+            </div>
+            <div class="issuenumber">
+                <h3>On Hold</h3>
+                <h1>42</h1>
+            </div>
+            <div class="trends">
+                <div class="chart">
+                    <p class="trendstitle">Today's Trends</p>
+                    <img src="https://mmackz.github.io/admin-dashboard/images/svg-chart.svg" alt="chart">
+                </div>
+                <div class="chart-details">
+                    <div class="chart-detail-one">
+                        <h4>Resolved</h4>
+                        <h2>449</h2>
+                    </div>
+                    <div class="chart-detail-two">
+                        <h4>Received</h4>
+                        <h2>426</h2>
+                    </div>
+                    <div class="chart-detail-three">
+                        <h4>Avg. Response Time</h4>
+                        <h2>3h 8m</h2>
+                    </div>
+                    <div class="chart-detail-four">
+                        <h4>Resolution</h4>
+                        <h2>94%</h2>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
