--- a/index.html
+++ b/index.html
@@ -143,6 +143,49 @@
                     </div>
                 </div>
             </div>
+            <div class="recent-tickets">
+                <h2>Recent Tickets</h2>
+                <div class="tickets-area">
+                    <div class="ticket-info">
+                        <h3>#323: Login Issue</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut dicta neque inventore...</p>
+                    </div>
+                    <div class="ticket-info">
+                        <h3>#324: Latency Issue</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut dicta neque inventore...</p>
+                    </div>
+                    <div class="ticket-info">
+                        <h3>#326: Unable to make purchase</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut dicta neque inventore...</p>
+                    </div>
+                    <div class="ticket-info">
+                        <h3>#327: Issue with registration</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut dicta neque inventore...</p>
+                    </div>
+                    <div class="ticket-info last">
+                        <h3>#328: Delivery Issue</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut dicta neque inventore...</p>
+                    </div>
+                </div>
+            </div>
+            <div class="tasks">
+                <div class="tasks-header">
+                    <div>
+                        <h2>Tasks</h2>
+                        <p>Today</p>
+                    </div>
+                    <a href="#" class="viewall">View All</a>
+                </div>
+                <div class="task">
+                    <div class="container-for-checkbox">
+                        <div class="round">
+                          <input type="checkbox" checked id="checkbox" />
+                          <label for="checkbox"></label>
+                        </div>
+                      </div>
+                    <h4>Finish Ticket Update</h4>
+                </div>
+            </div>
         </div>
     </div>
 </body>
